# capnp-playground

./: .gitignore  README.md
keys/: server.crt  server.key  server.p12
python/: client.py  server.py  ssl_client.py  ssl_server.py
rust/helloworld/: Cargo.toml
rust/helloworld/src/: helloworld_capnp.rs  lib.rs
