[package]
name = "helloworld"
version = "0.1.0"
authors = ["Adam Wierzbicki <awierzbicki@golem.network>"]

[dependencies]
capnp = "0.9"
capnp-rpc = "0.9"
native-tls = "0.2"
openssl = "0.10"
tokio = "0.1"
tokio-io = "0.1"
tokio-openssl = "0.3"
tokio-tls = "0.2"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "native_ssl_client"
path = "src/bin/native_ssl_client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "native_ssl_server"
path = "src/bin/native_ssl_server.rs"

[[bin]]
name = "openssl_server"
path = "src/bin/openssl_server.rs"
